<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/settings_m1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/settings_m2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/settings_m3"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/settings_alarm"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/preference"
        app:showAsAction="never"
        android:icon="@drawable/btn_settings"
        android:iconTint="@android:color/black"
        />
</menu>